package usecases.Timeline;

public enum TimelineEventType {
    NOTES_GENERATED,
    FLASHCARDS_GENERATED,
    QUIZ_GENERATED,
    QUIZ_SUBMITTED
}
