@startuml Use Case 6 - Timeline (Clean Architecture)

!theme plain
skinparam classAttributeIconSize 0
skinparam packageStyle rectangle
skinparam nodesep 30
skinparam ranksep 150
skinparam packagePadding 20

together {
    package "views" {
        class ViewManagerModel {
        }
        class ViewTimelineView {
        }
        class ViewTimelineViewModel {
        }
    }
    
    package "interface_adapters" {
        class TimelineController {
        }
        class ViewTimelineSwingPresenter {
        }
    }
}

together {
    package "usecases" <<Timeline>> {
        interface "I ViewTimelineInputBoundary" as ViewTimelineInputBoundary {
        }
        interface "I ViewTimelineOutputBoundary" as ViewTimelineOutputBoundary {
        }
        class ViewTimelineInteractor {
        }
        class ViewTimelineResponse {
        }
        class TimelineCardVM {
        }
    }
    
    package "entities" {
        class TimelineEvent {
        }
        enum TimelineEventType {
        }
    }
    
    package "data_access" {
        interface "I ITimelineRepository" as ITimelineRepository {
        }
        class InMemoryTimelineRepository {
        }
        class FileTimelineRepository {
        }
        class TimelineLogger {
        }
    }
}

' Relationships
ViewTimelineView --> TimelineController
ViewTimelineView --> ViewTimelineViewModel
ViewTimelineView --> ViewManagerModel

TimelineController --> ViewTimelineInputBoundary

ViewTimelineInteractor ..|> ViewTimelineInputBoundary
ViewTimelineInteractor --> ViewTimelineOutputBoundary
ViewTimelineInteractor --> ITimelineRepository
ViewTimelineInteractor --> ViewTimelineResponse
ViewTimelineInteractor --> TimelineEvent

ViewTimelineSwingPresenter ..|> ViewTimelineOutputBoundary
ViewTimelineSwingPresenter --> ViewTimelineViewModel

ViewTimelineViewModel --> ViewTimelineResponse
ViewTimelineResponse *-- TimelineCardVM

InMemoryTimelineRepository ..|> ITimelineRepository
FileTimelineRepository ..|> ITimelineRepository
InMemoryTimelineRepository --> TimelineEvent
FileTimelineRepository --> TimelineEvent

TimelineEvent --> TimelineEventType
TimelineLogger --> ITimelineRepository
TimelineLogger --> TimelineEvent

@enduml
